<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.kpcode4u.prasanthkumar.bakingapp.RecipseDetailsActivity">

    <android.support.v7.widget.CardView
        style="@style/recipes_cardview"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp">

        <TextView
            android:id="@+id/ingredients_textView"
            style="@style/recipes_cardview"
            android:text="Ingredients List"
            android:textSize="25sp"
            android:textStyle="bold"
            android:paddingLeft="20dp"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView_Steps"
        style="@style/recipes_cardview" />
</LinearLayout>
